; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sdhci/extr_sdhci.c_sdhci_handle_card_present_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sdhci/extr_sdhci.c_sdhci_handle_card_present_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_slot = type { i32, i32, i32, i32* }

@taskqueue_swi_giant = common dso_local global i32 0, align 4
@SDHCI_INSERT_DELAY_TICKS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdhci_slot*, i32)* @sdhci_handle_card_present_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdhci_handle_card_present_locked(%struct.sdhci_slot* %0, i32 %1) #0 {
  %3 = alloca %struct.sdhci_slot*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.sdhci_slot* %0, %struct.sdhci_slot** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %7 = getelementptr inbounds %struct.sdhci_slot, %struct.sdhci_slot* %6, i32 0, i32 3
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  %10 = zext i1 %9 to i32
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %23, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %13
  %17 = load i32, i32* @taskqueue_swi_giant, align 4
  %18 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %19 = getelementptr inbounds %struct.sdhci_slot, %struct.sdhci_slot* %18, i32 0, i32 2
  %20 = load i32, i32* @SDHCI_INSERT_DELAY_TICKS, align 4
  %21 = sub nsw i32 0, %20
  %22 = call i32 @taskqueue_enqueue_timeout(i32 %17, i32* %19, i32 %21)
  br label %35

23:                                               ; preds = %13, %2
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %23
  %27 = load i32, i32* %4, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %34, label %29

29:                                               ; preds = %26
  %30 = load i32, i32* @taskqueue_swi_giant, align 4
  %31 = load %struct.sdhci_slot*, %struct.sdhci_slot** %3, align 8
  %32 = getelementptr inbounds %struct.sdhci_slot, %struct.sdhci_slot* %31, i32 0, i32 1
  %33 = call i32 @taskqueue_enqueue(i32 %30, i32* %32)
  br label %34

34:                                               ; preds = %29, %26, %23
  br label %35

35:                                               ; preds = %34, %16
  ret void
}

declare dso_local i32 @taskqueue_enqueue_timeout(i32, i32*, i32) #1

declare dso_local i32 @taskqueue_enqueue(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
